# Muicebot-Plugin-Memory

./: README.md  pyproject.toml
.github/workflows/: pre-commit.yml
muicebot_plugin_memory/: README.md  __init__.py  config.py  rag.py  scheduler.py  utils.py
muicebot_plugin_memory/database/: models.py  repositories.py
muicebot_plugin_memory/migrations/: 17c40f39f343_first_revision.py  45d7006e569e_add_user_preferences.py
muicebot_plugin_memory/roberta/: inference_large.py
muicebot_plugin_memory/templates/: conversation.jinja2  conversation_summary.jinja2  importance.jinja2  key_summary.jinja2
